tests/error/file_ends_in_macro_expansion.c
// fail
#define C 1

foo (p)

{
  p[0] = C;




  p[5] = C
